# RA

lab1/: CMakeLists.txt  README.md
lab1/raLab/vjezba1/headers/: Shader.h
lab1/raLab/vjezba1/shaders/: shader1.frag  shader1.geom  shader1.vert  shader2.frag  shader2.geom  shader2.vert
lab1/raLab/vjezba1/sources/: Shader.cpp  main.cpp
lab2/Assets/Materials/: DropletMaterial.mat  FloorColor.mat
lab2/Assets/Prefabs/: Droplet.prefab
lab2/Assets/Scenes/: SampleScene.unity
lab2/Assets/Scripts/: CameraMovement.cs  CubeSpawnerDynamic.cs  DropletDestroyer.cs  RocketFlight.cs  RocketParticleSystemScript.cs  SpriteBillboard.cs
lab2/ProjectSettings/: InputManager.asset  ProjectSettings.asset
lab3 exe/32-bit/RA lab3_Data/: app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets  sharedassets0.assets.resS
lab3 exe/64-bit/RA lab3_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
lab3/Assets/: ParticleController.cs
lab3/Assets/Prefabs/: bee.prefab  brownParticle.prefab  crushable_platform.prefab  platform.prefab
lab3/Assets/Scenes/: SampleScene.unity
lab3/Assets/Scripts/: BeeController.cs  CameraController.cs  CrushablePlatformController.cs  GeneratorController.cs  PlatformController.cs  TeddyController.cs
lab3/ProjectSettings/: ProjectSettings.asset
